--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "filament/upgrade": "^3.2",
         "kkomelin/laravel-translatable-string-exporter": "^1.17",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
